fix some warnings 2